<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".ui.home.HomeFragment"
    android:padding="16dp">
    <!--android:gravity="center"-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center_vertical"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/home_title"
            style="@style/HomeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="90sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/home_description"
            style="@style/HomeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="24dp"
            android:text="@string/home_description"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/visnjan_link_text_view"
            style="@style/HomeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="24dp"
            android:text="@string/visnjan_observatory"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:background="@drawable/circle_button"
                android:src="@drawable/ic_home" />

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:background="@drawable/circle_button"
                android:src="@drawable/ic_home" />

        </LinearLayout>

        <TextView
            android:id="@+id/hrt_link_text_view"
            style="@style/HomeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="8dp"
            android:text="@string/croatian_radio"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/circle_button"
            android:src="@drawable/ic_home" />

    </LinearLayout>
</ScrollView>