<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".ui.player.PlayerFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/player_fragment_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primaryColor"
            android:gravity="center"
            android:elevation="4dp"
            app:titleTextColor="@color/exo_white" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/album_art"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@id/player_controls"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/album_art" />

            <LinearLayout
                android:id="@+id/player_controls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/primaryColor"
                android:paddingVertical="@dimen/margin_thing"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/album_art">

                <LinearLayout
                    android:id="@+id/seekBarLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/position"
                        android:layout_width="@dimen/thickest_timestamp"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:gravity="end"
                        android:maxLines="1"
                        tools:text="0:00" />

                    <SeekBar
                        android:id="@+id/seekBar"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="16" />

                    <TextView
                        android:id="@+id/duration"
                        android:layout_width="@dimen/thickest_timestamp"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:gravity="start"
                        android:maxLines="1"
                        tools:text="0:00" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/transport_controls"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/rewind_button"
                        android:layout_width="@dimen/exo_media_button_width"
                        android:layout_height="@dimen/exo_media_button_height"
                        android:background="?attr/selectableItemBackground"
                        android:scaleType="centerInside"
                        android:src="@drawable/exo_icon_rewind"
                        android:contentDescription="@string/rewind_button" />

                    <ImageButton
                        android:id="@+id/media_button"
                        android:layout_width="@dimen/exo_media_button_width"
                        android:layout_height="@dimen/exo_media_button_height"
                        android:background="?attr/selectableItemBackground"
                        android:scaleType="centerInside"
                        android:contentDescription="@string/play_pause_button" />

                    <ImageButton
                        android:id="@+id/fast_forward_button"
                        android:layout_width="@dimen/exo_media_button_width"
                        android:layout_height="@dimen/exo_media_button_height"
                        android:background="?attr/selectableItemBackground"
                        android:scaleType="centerInside"
                        android:src="@drawable/exo_icon_fastforward"
                        android:contentDescription="@string/fast_forward_button" />

                </LinearLayout>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>